crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_bare_instance_call_used_as_a_statement_lowers_too.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:26
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @8:5-8:19
    retain v1
    v2 = call Foo::greet(this: v1) ! bb2  ; void
    release v1
    release v0
    return
  bb1:
    release v0
    propagate "m() at t.nvs:7"
  bb2:
    release v1
    release v0
    propagate "m() at t.nvs:8"
}
