crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_bare_literal_targeting_uint_is_lowered_as_uint.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> uint {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:17
    v1 = const.uint 1  ; uint
    ; stmt s1 @5:5-5:15
    release v0
    return v1
}
