crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_bytes_condition_takes_its_own_truthy_helper.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bytes) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bytes
    ; stmt s0 @4:5-6:6
    v2 = helper.bytes_truthy v1 ! bb1  ; bool
    branch v2 -> bb3 (e0), bb2 (e1)
  bb1:
    release v1
    release v0
    propagate "m() at t.nvs:4"
  bb2:
    ; stmt s3 @7:5-7:18
    v4 = const.bool false  ; bool
    release v1
    release v0
    return v4
  bb3:
    ; stmt s1 @4:13-6:6
    ; stmt s2 @5:7-5:19
    v3 = const.bool true  ; bool
    release v1
    release v0
    return v3
}
