crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_bytes_parameter_bound_to_a_local_transfers_out_on_return.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn pick(object, bytes) -> bytes {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bytes
    ; stmt s0 @4:5-4:19
    retain v1
    ; stmt s1 @5:5-5:15
    release v1
    release v0
    return v1
}
