crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_class_test_names_the_class_the_checker_resolved.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, object) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; object
    ; stmt s0 @8:5-8:22
    v2 = class.test v1, Dog  ; bool
    release v1
    release v0
    return v2
}
