crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_class_typed_local_initialized_from_new.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn make(object) -> object {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @5:5-5:24
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @6:5-6:15
    release v0
    return v1
  bb1:
    release v0
    propagate "make() at t.mwl:5"
}
